complete server programming and add media

--- a/worldskills/website/assets/css/main.css
+++ b/worldskills/website/assets/css/main.css
@@ -44,7 +44,8 @@ section {
 }
 
 .section-bg {
-  background: url(../img/bg.jpg);
+  background-image: url(../img/bg.jpg);
+  background-attachment: fixed;
   color: #fff;
 }
 
