create hero structure

--- a/course/app/scss/components/header.scss
+++ b/course/app/scss/components/header.scss
@@ -1,28 +1,10 @@
 @use '../util' as *;
 
-html {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 0 20px;
-  max-width: 1200px;
-}
-
 .header {
-  background-color: #808080;
+  background-color: rgba(150, 150, 150, .9);
+  position: absolute;
   padding: 20px 0;
+  width: 100%;
 
   &__inner {
     display: flex;
