--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -24,7 +24,7 @@ a,
 a:visited,
 a:active {
 	text-decoration: none;
-	color: #000;
+	color: var(--black);
 }
 
 a:hover:not(.logo) {
@@ -33,8 +33,8 @@ a:hover:not(.logo) {
 
 input,
 textarea {
-	box-shadow: 0 3px 0 #939393;
-	border: 2px solid #939393;
+	box-shadow: 0 3px 0 var(--gray);
+	border: 2px solid var(--gray);
 	padding: 10px 80px 10px 20px;
 	resize: vertical;
 }
@@ -43,17 +43,25 @@ textarea {
 	padding: 20px;
 	font-size: 30px;
 	font-weight: 700;
-	overflow: hidden;
 	text-transform: uppercase;
-	transition: .3s ease-in-out;
+	position: relative;
+	color: var(--white);
+	text-shadow: 0 0 50px var(--white);
+	background: var(--black);
 
-	&:hover {
-		color: #fff;
-		text-shadow: 0 0 50px #fff;
-		background: #000;
+	&::after {
+		content: '';
+		width: 100%;
+		height: 40px;
+		background-color: var(--black);
+		position: absolute;
+		top: 60px;
+		left: 0;
+		z-index: -1;
+		clip-path: polygon(50% 50%, 100% 75%, 100% 0, 0 0, 0 75%);
 	}
 
 	span {
-		color: orange;
+		color: var(--brand);
 	}
 }
