--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -49,16 +49,21 @@ textarea {
 	text-shadow: 0 0 50px var(--white);
 	background: var(--black);
 
+	&:hover::after {
+		top: 70px;
+	}
+
 	&::after {
 		content: '';
 		width: 100%;
 		height: 40px;
+		transition: .3s;
 		background-color: var(--black);
 		position: absolute;
 		top: 60px;
 		left: 0;
 		z-index: -1;
-		clip-path: polygon(50% 50%, 100% 75%, 100% 0, 0 0, 0 75%);
+		clip-path: polygon(50% 50%, 100% 100%, 100% 0, 0 0, 0 100%);
 	}
 
 	span {
