--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -31,6 +31,13 @@ a:hover:not(.logo) {
 	text-decoration: underline;
 }
 
+label {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+}
+
 input,
 textarea {
 	box-shadow: 0 3px 0 var(--gray);
