--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -1,14 +1,14 @@
 @use '../util' as *;
 
-.feedback {
-  background: url('https://phonoteka.org/uploads/posts/2021-04/1618499076_46-p-fon-dlya-mokapa-48.jpg') no-repeat 0 0 / cover;
+.feedback__inner {
+  background: url('https://phonoteka.org/uploads/posts/2021-04/1618499076_46-p-fon-dlya-mokapa-48.jpg') no-repeat 0 100% / cover fixed;
   color: var(--white);
+  padding: 80px 0;
   // filter: blur(5px);
 }
 
 form {
   display: flex;
-  align-items: center;
   justify-content: center;
   max-width: 800px;
   margin: 0 auto;
