--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -11,8 +11,21 @@ h1 {
 	font-size: 60px;
 }
 
+h2 {
+	font-size: 40px;
+}
+
+h3 {
+	font-size: 20px;
+}
+
 .subtitle {
 	font-size: 24px;
+	opacity: .6;
+}
+
+p {
+	font-size: 18px;
 	opacity: .6;
 }
 
