--- a/course/app/scss/components/hero.scss
+++ b/course/app/scss/components/hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url('https://phonoteka.org/uploads/posts/2021-06/1624355307_45-phonoteka_org-p-oboi-dlya-ofisa-krasivo-48.png') no-repeat 50% / cover fixed;
+  background: url('https://phonoteka.org/uploads/posts/2021-06/1624355307_45-phonoteka_org-p-oboi-dlya-ofisa-krasivo-48.png') no-repeat 50% / cover;
   text-align: center;
   min-height: 100vh;
   font-size: 40px;
