--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -1,22 +1,29 @@
 @use '../util' as *;
 
-.feedback__inner {
-  background: url('https://phonoteka.org/uploads/posts/2021-04/1618499076_46-p-fon-dlya-mokapa-48.jpg') no-repeat 0 100% / cover fixed;
-  color: var(--white);
-  padding: 80px 0;
-  // filter: blur(5px);
+.feedback {
+  &__inner {
+    color: var(--white);
+    position: relative;
+  }
+
+  &__bg {
+    min-width: 100%;
+    height: 600px;
+    filter: blur(5px);
+    background: url('https://phonoteka.org/uploads/posts/2021-04/1618499076_46-p-fon-dlya-mokapa-48.jpg') no-repeat 0 100% / cover fixed;
+  }
 }
 
 form {
-  display: flex;
-  justify-content: center;
-  max-width: 800px;
-  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   flex-wrap: wrap;
   font-size: 20px;
 
   >* {
     width: 100%;
-    padding: 20px 20px;
+    margin: 20px;
   }
 }
