--- a/course/app/scss/components/job.scss
+++ b/course/app/scss/components/job.scss
@@ -9,21 +9,19 @@
   }
 
   &__item {
-    border-radius: 20px 40%;
-    border: 5px solid;
-    border-top-color: var(--brand);
-    border-bottom-color: var(--brand);
+    border-radius: 17px;
+    border: 3px dashed var(--gray);
     max-width: 250px;
-    margin: 10px;
+    margin: 20px 10px 10px;
     padding: 25px;
-    padding-left: 20px;
     position: relative;
+    transition: all .3s ease-in-out;
   }
 
   &__item:hover {
-    box-shadow: -10px 10px 2px rgba(153, 153, 153, .2);
+    box-shadow: 0 5px 50px var(--gray);
     text-decoration: none !important;
-    top: -10px;
+    margin-top: 10px;
   }
 
   &__subtitle {
