--- a/course/app/scss/globals/layout.scss
+++ b/course/app/scss/globals/layout.scss
@@ -1,16 +1,12 @@
 @use '../util' as *;
 
 .container {
-	padding: 0 rem(24);
+	padding: 0 rem(25);
 	max-width: rem(1110);
 	margin: 0 auto;
 
 	@include breakpoint(large) {
-		padding: 0;
+		padding: rem(60) 0;
 		transform: translate(0, 0);
 	}
-}
-
-section:not(.feedback) {
-	padding: 60px 0 !important;
 }
