--- a/course/app/scss/globals/colors.scss
+++ b/course/app/scss/globals/colors.scss
@@ -1,7 +1,8 @@
 :root {
 	--white: hsl(0, 0%, 100%);
-	--gray: hsl(0, 0%, 60%);
+	--gray: hsl(210, 11%, 71%);
 	--black: hsl(0, 0%, 0%);
+	--green: hsl(152, 69%, 31%);
 
-	--brand: hsl(40, 82%, 46%);
+	--brand: hsl(162, 73%, 46%);
 }
