create account popup

--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -13,4 +13,50 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: var(--font-body);
+
+	.overlay {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: rgba(0, 0, 0, .8);
+		transition: opacity 200ms;
+		visibility: hidden;
+		opacity: 0;
+		z-index: 10;
+
+		.cancel {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			cursor: default;
+		}
+
+		&:target {
+			visibility: visible;
+			opacity: 1;
+		}
+	}
+
+	.popup {
+		margin: 100px auto;
+		padding: 20px;
+		background: #fff;
+		max-width: 300px;
+		position: relative;
+
+		.close {
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			top: 20px;
+			right: 20px;
+			transition: all 200ms;
+			font-size: 24px;
+			font-weight: bold;
+			text-decoration: none;
+			color: #666;
+		}
+	}
 }
