--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -10,7 +10,7 @@
     min-width: 100%;
     height: 600px;
     filter: blur(5px);
-    background: url('https://phonoteka.org/uploads/posts/2021-04/1618499076_46-p-fon-dlya-mokapa-48.jpg') no-repeat 0 100% / cover fixed;
+    background: url('../images/content/feedback.png') no-repeat 0 100% / cover fixed;
   }
 
   form {
