--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -6,10 +6,11 @@
     position: relative;
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 80px;
   }
 
   &__bg {
-    border-radius: 5%;
+    border-radius: 25px;
     height: 600px;
     filter: blur(rem(5));
     background: url('../images/content/feedback.png') no-repeat 50% 50% / contain fixed;
@@ -36,6 +37,25 @@
         color: #fff;
         font-size: 14px;
         font-family: var(--font-body);
+      }
+    }
+
+    button {
+      background-color: #fff;
+      padding: 20px;
+      width: 50%;
+      position: relative;
+      top: 130px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 25px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: .3s;
+
+      &:hover {
+        top: 140px;
+        box-shadow: 0 -10px 0 var(--gray);
       }
     }
   }
