--- a/course/app/scss/components/feedback.scss
+++ b/course/app/scss/components/feedback.scss
@@ -7,10 +7,10 @@
     max-width: 1000px;
     margin: 0 auto;
     margin-bottom: 80px;
+    border: 50px solid #000;
   }
 
   &__bg {
-    border-radius: 25px;
     height: 600px;
     filter: blur(rem(5));
     background: url('../images/content/feedback.png') no-repeat 50% 50% / contain fixed;
@@ -52,10 +52,12 @@
       font-weight: 700;
       cursor: pointer;
       transition: .3s;
+      box-shadow: 0 0 5px #fff;
 
       &:hover {
-        top: 140px;
-        box-shadow: 0 -10px 0 var(--gray);
+        background-color: #000;
+        box-shadow: none;
+        color: #fff;
       }
     }
   }
