--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -47,6 +47,7 @@ body {
 		position: relative;
 		display: flex;
 		align-items: center;
+		border-radius: 20px;
 
 		.close {
 			position: absolute;
