--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -49,6 +49,14 @@ body {
 		align-items: center;
 		border-radius: 20px;
 
+		&__inner {
+			display: none;
+		}
+
+		#login {
+			display: block;
+		}
+
 		.close {
 			position: absolute;
 			width: 20px;
