--- a/course/app/scss/components/search.scss
+++ b/course/app/scss/components/search.scss
@@ -32,9 +32,11 @@
 .article {
 
   &__box {
+    display: block;
     padding: rem(20);
     border-radius: rem(20);
     border: 1px solid var(--gray);
     margin-bottom: rem(40);
+    cursor: pointer;
   }
 }
