--- a/course/app/scss/components/search.scss
+++ b/course/app/scss/components/search.scss
@@ -38,5 +38,21 @@
     border: 1px solid var(--gray);
     margin-bottom: rem(40);
     cursor: pointer;
+
+    div:last-child {
+      display: flex;
+
+      a+a {
+        margin-left: rem(20);
+      }
+    }
+
+    .price {
+      float: right;
+    }
+
+    .region {
+      opacity: .5;
+    }
   }
 }
