modify footer to multicolumn

--- a/course/app/scss/components/footer.scss
+++ b/course/app/scss/components/footer.scss
@@ -5,7 +5,7 @@
   color: var(--gray);
   padding: 20px 0;
 
-  &__inner {
+  &__content {
     text-align: left;
     display: flex;
     flex-wrap: wrap;
