--- a/course/app/scss/globals/typography.scss
+++ b/course/app/scss/globals/typography.scss
@@ -5,6 +5,7 @@ h2,
 h3 {
 	margin: 0 0 40px;
 	line-height: 1.1;
+	position: relative;
 }
 
 h1 {
@@ -43,7 +44,7 @@ a {
 	color: var(--black);
 }
 
-input,
+input:not([type="radio"]),
 textarea {
 	box-shadow: 0 3px 0 var(--gray);
 	border: 2px solid var(--gray);
@@ -52,9 +53,13 @@ textarea {
 	resize: none;
 }
 
+.hidden {
+	display: none;
+}
+
 .btn {
-	font-weight: 700;
 	font-size: 18px;
+	font-weight: 700;
 	display: inline-flex;
 	align-items: center;
 	overflow: hidden;
@@ -62,15 +67,18 @@ textarea {
 	background-color: transparent;
 	border: rem(2) solid var(--brand);
 	border-radius: 10px;
-	cursor: pointer;
 	padding: 5px 20px;
 	transition: .4s;
+	cursor: pointer;
 
-	&__search img {
-		width: 25px;
-		position: absolute;
-		top: rem(30);
-		right: rem(30);
+	&__search {
+		position: relative;
+		top: rem(8);
+		right: rem(48);
+
+		img {
+			width: rem(25);
+		}
 	}
 
 	img {
@@ -94,14 +102,15 @@ textarea {
 	font-size: 30px;
 	font-weight: 700;
 	text-transform: uppercase;
-	position: relative;
+	position: fixed;
+	z-index: 1;
 	color: var(--white);
 	background: var(--black);
 
 	&::after {
 		content: '';
 		width: 100%;
-		height: 40px;
+		height: rem(40);
 		transition: .3s;
 		background-color: var(--black);
 		position: absolute;
