--- a/course/app/scss/components/header.scss
+++ b/course/app/scss/components/header.scss
@@ -2,19 +2,23 @@
 
 .header {
 
-  &__inner {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
   .menu ul {
     display: flex;
     align-items: center;
+    justify-content: right;
 
     li+li {
       margin-left: 20px;
+    }
+
+    a:not(.btn) {
+      display: block;
+      padding: rem(30) 0;
+      transition: .3s;
+
+      &:hover {
+        box-shadow: 0 rem(-10) 0 var(--brand) inset;
+      }
     }
   }
 }
