--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -42,7 +42,7 @@ body {
 
 	.popup {
 		margin: 100px auto;
-		padding: 20px;
+		padding: 40px;
 		background: #fff;
 		max-width: 790px;
 		position: relative;
@@ -52,41 +52,31 @@ body {
 		border-radius: 20px;
 
 		&__inner {
-			// display: none;
 			margin: 0 20px;
 		}
-
-		// &__btns {
-		// 	display: flex;
-		// 	justify-content: space-between;
-		// }
-
-		// #login {
-		// 	display: block;
-		// }
 
 		.close {
 			position: absolute;
 			width: 20px;
-			height: 20px;
-			top: 20px;
-			right: 20px;
+			top: 10px;
+			right: 15px;
 			transition: all 200ms;
-			font-size: 24px;
+			text-align: center;
+			font-size: 30px;
 			font-weight: bold;
 			text-decoration: none;
 			color: #666;
 		}
 
-		form {
-
-			>* {
-				margin-bottom: 25px;
-			}
-
-			input {
-				width: 100%;
-			}
+		form :not(:last-child) {
+			margin-bottom: 25px;
+			width: 100%;
 		}
+	}
+
+	footer {
+		text-align: center;
+		color: var(--gray);
+		padding: 20px 0;
 	}
 }
