--- a/course/app/scss/components/header.scss
+++ b/course/app/scss/components/header.scss
@@ -11,7 +11,7 @@
       margin-left: 20px;
     }
 
-    a:not(.btn) {
+    a:not(.btn, .btn__search) {
       display: block;
       padding: rem(30) 0;
       transition: .3s;
