--- a/course/app/scss/components/search.scss
+++ b/course/app/scss/components/search.scss
@@ -51,8 +51,25 @@
       float: right;
     }
 
-    .region {
+    .search {
       opacity: .5;
     }
+  }
+}
+
+.avatar {
+  display: flex;
+  align-items: center;
+  margin-bottom: rem(25);
+
+  img {
+    width: rem(75);
+    height: rem(75);
+    border-radius: 50%;
+    margin-right: rem(25);
+  }
+
+  h2 {
+    margin: 0;
   }
 }
