sort account links

--- a/course/app/scss/components/_index.scss
+++ b/course/app/scss/components/_index.scss
@@ -1,6 +1,7 @@
 @forward 'header';
 @forward 'hero';
 @forward 'job';
+@forward 'description';
 @forward 'feedback';
 @forward 'search';
 @forward 'admin';
