--- a/course/app/scss/components/hero.scss
+++ b/course/app/scss/components/hero.scss
@@ -3,22 +3,19 @@
 .hero {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: url('../images/content/bg.png') no-repeat 50% / cover;
-  text-align: center;
-  min-height: 100vh;
-  font-size: 40px;
+  min-height: rem(875);
+  font-size: rem(40);
+  background-color: var(--black);
   color: var(--white);
-
-  &::before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, .6);
-  }
+  margin-bottom: rem(200);
 
   &__inner {
-    max-width: rem(900);
+    width: 100vw;
+    position: relative;
+    z-index: 2;
+
+    div {
+      max-width: rem(500);
+    }
   }
 }
