--- a/course/app/scss/components/search.scss
+++ b/course/app/scss/components/search.scss
@@ -34,7 +34,7 @@
     display: block;
     padding: rem(20);
     border-radius: rem(20);
-    border: 1px solid var(--gray);
+    border: rem(1) solid var(--gray);
     margin-bottom: rem(40);
     cursor: pointer;
 
