--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -89,32 +89,36 @@ body {
 		width: rem(240);
 		height: rem(320);
 
+		*:not(.swiper-slide) {
+			background-color: transparent !important;
+		}
+
 		&-slide {
 			border-radius: rem(20);
 			font-size: rem(20);
 			font-weight: bold;
-			border: 2px solid var(--white);
+			border: 2px solid var(--black);
+			overflow: visible !important;
 			position: relative;
-			overflow: visible;
 
 			&::before {
 				position: absolute;
-				top: rem(-15);
+				top: rem(-40);
 				left: 50%;
-				width: rem(100);
-				height: rem(30);
+				height: rem(20);
+				text-align: center;
 				transform: translateX(-50%);
 				border-radius: rem(20) rem(20) 0 0;
-				background-color: var(--white);
+				background-color: var(--black);
 				padding: rem(10);
-				color: var(--black);
+				color: var(--white);
 			}
 
 			&:nth-child(1n) {
 				background-color: rgba(206, 17, 17, .8);
 
 				&::before {
-					content: 'Лилит';
+					content: 'Дизайнер';
 				}
 			}
 
@@ -122,7 +126,7 @@ body {
 				background-color: rgb(0, 140, 255, .8) !important;
 
 				&::before {
-					content: 'Денис' !important;
+					content: 'Разработчик' !important;
 				}
 			}
 
@@ -130,7 +134,7 @@ body {
 				background-color: rgb(10, 184, 111, .8) !important;
 
 				&::before {
-					content: 'Лилит' !important;
+					content: 'Диктор' !important;
 				}
 			}
 
@@ -138,6 +142,37 @@ body {
 				width: rem(250);
 				height: rem(321);
 			}
+		}
+	}
+
+	#ocean {
+		position: absolute;
+		top: rem(800);
+		width: 100%;
+		height: rem(250);
+		background-color: var(--white);
+	}
+
+	.wave {
+		background-color: var(--black);
+		display: inline-block;
+		height: 60%;
+		width: 10px;
+		position: absolute;
+		animation: 3s dostuff infinite ease-in-out;
+	}
+
+	@keyframes dostuff {
+		0% {
+			height: 60%;
+		}
+
+		50% {
+			height: 40%;
+		}
+
+		100% {
+			height: 60%;
 		}
 	}
 
