--- a/course/app/scss/globals/boilerplate.scss
+++ b/course/app/scss/globals/boilerplate.scss
@@ -1,16 +1,16 @@
 @use '../util' as *;
 
 html {
-	font-size: 100%;
-	box-sizing: border-box;
+	box-sizing: border-box !important;
 	scroll-behavior: smooth;
 	overflow-x: hidden;
+	font-size: 100%;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+	box-sizing: inherit !important;
 }
 
 body {
@@ -82,66 +82,6 @@ body {
 		form :not(:last-child) {
 			margin-bottom: rem(25);
 			width: 100%;
-		}
-	}
-
-	.swiper {
-		width: rem(240);
-		height: rem(320);
-
-		*:not(.swiper-slide) {
-			background-color: transparent !important;
-		}
-
-		&-slide {
-			border-radius: rem(20);
-			font-size: rem(20);
-			font-weight: bold;
-			border: 2px solid var(--black);
-			overflow: visible !important;
-			position: relative;
-
-			&::before {
-				position: absolute;
-				top: rem(-40);
-				left: 50%;
-				height: rem(20);
-				text-align: center;
-				transform: translateX(-50%);
-				border-radius: rem(20) rem(20) 0 0;
-				background-color: var(--black);
-				padding: rem(10);
-				color: var(--white);
-			}
-
-			&:nth-child(1n) {
-				background-color: rgba(206, 17, 17, .8);
-
-				&::before {
-					content: 'Дизайнер';
-				}
-			}
-
-			&:nth-child(2n) {
-				background-color: rgb(0, 140, 255, .8) !important;
-
-				&::before {
-					content: 'Разработчик' !important;
-				}
-			}
-
-			&:nth-child(3n) {
-				background-color: rgb(10, 184, 111, .8) !important;
-
-				&::before {
-					content: 'Диктор' !important;
-				}
-			}
-
-			img {
-				width: rem(250);
-				height: rem(321);
-			}
 		}
 	}
 
