--- a/course/app/scss/components/job.scss
+++ b/course/app/scss/components/job.scss
@@ -8,13 +8,30 @@
   }
 
   &__item {
-    transition: .3s ease-in-out;
-    border-radius: rem(10);
-    border: rem(2) solid;
-    padding: rem(25);
+    display: block;
+    padding: rem(20);
+    border-radius: rem(20);
+    border: rem(1) solid var(--gray);
+    margin-bottom: rem(40);
 
-    &:hover {
-      box-shadow: 0 0 rem(50) var(--gray);
+    div {
+
+      &:last-child {
+        display: flex;
+        align-items: center;
+
+        *+* {
+          margin-left: rem(20);
+        }
+      }
+    }
+
+    .price {
+      float: right;
+    }
+
+    .search {
+      opacity: .5;
     }
   }
 
